libpq_fe.pas


function PQdb(conn:PPGconn):PChar; cdecl;
function PQuser(conn:PPGconn):PChar; cdecl;
function PQpass(conn:PPGconn):PChar; cdecl;
function PQhost(conn:PPGconn):PChar; cdecl;
function PQport(conn:PPGconn):PChar; cdecl;
function PQtty(conn:PPGconn):PChar; cdecl;
function PQoptions(conn:PPGconn):PChar; cdecl;
function PQstatus(conn:PPGconn):ConnStatusType; cdecl;
function PQtransactionStatus(conn:PPGconn):PGTransactionStatusType; cdecl;
function PQparameterStatus(conn:PPGconn; paramName:PChar):PChar; cdecl;
function PQprotocolVersion(conn:PPGconn):longint; cdecl;
function PQserverVersion(conn:PPGconn):longint; cdecl;
function PQerrorMessage(conn:PPGconn):PChar; cdecl;
function PQsocket(conn:PPGconn):longint; cdecl;
function PQbackendPID(conn:PPGconn):longint; cdecl;
function PQconnectionNeedsPassword(conn:PPGconn):longint; cdecl;
function PQconnectionUsedPassword(conn:PPGconn):longint; cdecl;
function PQclientEncoding(conn:PPGconn):longint; cdecl;
function PQsetClientEncoding(conn:PPGconn; encoding:PChar):longint; cdecl;
{ Get the OpenSSL structure associated with a connection. Returns NULL for
 * unencrypted connections or if any other TLS library is in use.  }
function PQgetssl(conn:PPGconn):pointer; cdecl;
{ Tell libpq whether it needs to initialize OpenSSL  }
procedure PQinitSSL(do_init:longint); cdecl;
{ More detailed way to tell libpq whether it needs to initialize OpenSSL  }
procedure PQinitOpenSSL(do_ssl:longint; do_crypto:longint); cdecl;
{ Set verbosity for PQerrorMessage and PQresultErrorMessage  }
function PQsetErrorVerbosity(conn:PPGconn; verbosity:PGVerbosity):PGVerbosity; cdecl;
{ Enable/disable tracing  }
procedure PQtrace(conn:PPGconn; debug_port:PFILE); cdecl;
procedure PQuntrace(conn:PPGconn); cdecl;
{ Override default notice handling routines  }
function PQsetNoticeReceiver(conn:PPGconn; proc:PQnoticeReceiver; arg:pointer):PQnoticeReceiver; cdecl;
function PQsetNoticeProcessor(conn:PPGconn; proc:PQnoticeProcessor; arg:pointer):PQnoticeProcessor; cdecl;
{
 *	   Used to set callback that prevents concurrent access to
 *	   non-thread safe functions that libpq needs.
 *	   The default implementation uses a libpq internal mutex.
 *	   Only required for multithreaded apps that use kerberos
 *	   both within their app and for postgresql connections.
  }

function PQregisterThreadLock(newhandler:pgthreadlock_t):pgthreadlock_t; cdecl;
{ === in fe-exec.c ===  }
{ Simple synchronous query  }

function PQexec(conn:PPGconn; query:PChar):PPGresult; cdecl;
function PQexecParams(conn:PPGconn; command:PChar; nParams:longint; paramTypes:POid; paramValues: PPChars;
           paramLengths: PIntegers; paramFormats: PIntegers; resultFormat:longint):PPGresult; cdecl;
function PQprepare(conn:PPGconn; stmtName:PChar; query:PChar; nParams:longint; paramTypes:POid):PPGresult; cdecl;
function PQexecPrepared(conn:PPGconn; stmtName:PChar; nParams:longint; paramValues: PPChars; paramLengths:PIntegers;
           paramFormats:PIntegers; resultFormat:longint):PPGresult; cdecl;
{ Interface for multiple-result or asynchronous queries  }

function PQsendQuery(conn:PPGconn; query:PChar):longint; cdecl;
function PQsendQueryParams(conn:PPGconn; command:PChar; nParams:longint; paramTypes:POid; paramValues: PPChars;
           paramLengths:Plongint; paramFormats:Plongint; resultFormat:longint):longint; cdecl;
function PQsendPrepare(conn:PPGconn; stmtName:PChar; query:PChar; nParams:longint; paramTypes:POid):longint; cdecl;
function PQsendQueryPrepared(conn:PPGconn; stmtName:PChar; nParams:longint; paramValues: PPChars; paramLengths:Plongint;
           paramFormats:Plongint; resultFormat:longint):longint; cdecl;
function PQgetResult(conn:PPGconn):PPGresult; cdecl;
{ Routines for managing an asynchronous query  }
function PQisBusy(conn:PPGconn):longint; cdecl;
function PQconsumeInput(conn:PPGconn):longint; cdecl;
{ LISTEN/NOTIFY support  }
function PQnotifies(conn:PPGconn):PPGnotify; cdecl;

{ Routines for copy in/out  }

function PQputCopyData(conn:PPGconn; buffer:PChar; nbytes:longint):longint; cdecl;
function PQputCopyEnd(conn:PPGconn; errormsg:PChar):longint; cdecl;
function PQgetCopyData(conn:PPGconn; buffer:PPchar; async:longint):longint; cdecl;
{ Deprecated routines for copy in/out  }
function PQgetline(conn:PPGconn; _string:PChar; length:longint):longint; cdecl;
function PQputline(conn:PPGconn; _string:PChar):longint; cdecl;
function PQgetlineAsync(conn:PPGconn; buffer:PChar; bufsize:longint):longint; cdecl;
function PQputnbytes(conn:PPGconn; buffer:PChar; nbytes:longint):longint; cdecl;
function PQendcopy(conn:PPGconn):longint; cdecl;
{ Set blocking/nonblocking connection to the backend  }
function PQsetnonblocking(conn:PPGconn; arg:longint):longint; cdecl;
function PQisnonblocking(conn:PPGconn):longint; cdecl;
function PQisthreadsafe:longint; cdecl;
{ Force the write buffer to be written (or at least try)  }
function PQflush(conn:PPGconn):longint; cdecl;
{
 * "Fast path" interface --- not really recommended for application
 * use
  }

function PQfn(conn:PPGconn; fnid:longint; result_buf:Plongint; result_len:Plongint; result_is_int:longint;
           args:PPQArgBlock; nargs:longint):PPGresult; cdecl;

{ Accessor functions for PGresult objects  }

function PQresultStatus(res:PPGresult):ExecStatusType; cdecl;
function PQresStatus(status:ExecStatusType):PChar; cdecl;
function PQresultErrorMessage(res:PPGresult):PChar; cdecl;
function PQresultErrorField(res:PPGresult; fieldcode:longint):PChar; cdecl;
function PQntuples(res:PPGresult):longint; cdecl;
function PQnfields(res:PPGresult):longint; cdecl;
function PQbinaryTuples(res:PPGresult):longint; cdecl;
function PQfname(res:PPGresult; field_num:longint):PChar; cdecl;
function PQfnumber(res:PPGresult; field_name:PChar):longint; cdecl;
function PQftable(res:PPGresult; field_num:longint):Oid; cdecl;
function PQftablecol(res:PPGresult; field_num:longint):longint; cdecl;
function PQfformat(res:PPGresult; field_num:longint):longint; cdecl;
function PQftype(res:PPGresult; field_num:longint):Oid; cdecl;
function PQfsize(res:PPGresult; field_num:longint):longint; cdecl;
function PQfmod(res:PPGresult; field_num:longint):longint; cdecl;
function PQcmdStatus(res:PPGresult):PChar; cdecl;
function PQoidStatus(res:PPGresult):PChar; cdecl;
{ old and ugly  }
function PQoidValue(res:PPGresult):Oid; cdecl;
{ new and improved  }
function PQcmdTuples(res:PPGresult):PChar; cdecl;
function PQgetvalue(res:PPGresult; tup_num:longint; field_num:longint):PChar; cdecl;
function PQgetlength(res:PPGresult; tup_num:longint; field_num:longint):longint; cdecl;
function PQgetisnull(res:PPGresult; tup_num:longint; field_num:longint):longint; cdecl;
function PQnparams(res:PPGresult):longint; cdecl;
function PQparamtype(res:PPGresult; param_num:longint):Oid; cdecl;

{ Describe prepared statements and portals  }

function PQdescribePrepared(conn:PPGconn; stmt:PChar):PPGresult; cdecl;
function PQdescribePortal(conn:PPGconn; portal:PChar):PPGresult; cdecl;
function PQsendDescribePrepared(conn:PPGconn; stmt:PChar):longint; cdecl;
function PQsendDescribePortal(conn:PPGconn; portal:PChar):longint; cdecl;

{ Delete a PGresult  }
procedure PQclear(res:PPGresult); cdecl;
{ For freeing other alloc'd results, such as PGnotify structs  }
procedure PQfreemem(ptr:pointer); cdecl;
{ Exists for backward compatibility.  bjm 2003-03-24  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
procedure PQfreeNotify(ptr : pointer);

{ Create and manipulate PGresults  }

function PQmakeEmptyPGresult(conn:PPGconn; status:ExecStatusType):PPGresult; cdecl;

function PQcopyResult(src:PPGresult; flags:longint):PPGresult; cdecl;
function PQsetResultAttrs(res:PPGresult; numAttributes:longint; attDescs:PPGresAttDesc):longint; cdecl;
function PQresultAlloc(res:PPGresult; nBytes:size_t):pointer; cdecl;
function PQsetvalue(res:PPGresult; tup_num:longint; field_num:longint; value:PChar; len:longint):longint; cdecl;

{ Quoting strings before inclusion in queries.  }

function PQescapeStringConn(conn:PPGconn; c_to:PChar; from:PChar; length:size_t; error:Plongint):size_t; cdecl;
function PQescapeByteaConn(conn:PPGconn; from:PByte; from_length:size_t; to_length:Psize_t):PByte; cdecl;
function PQunescapeBytea(strtext:PByte; retbuflen:Psize_t):PByte; cdecl;
{ These forms are deprecated!  }
function PQescapeString(c_to:PChar; from:PChar; length:size_t):size_t; cdecl;
function PQescapeBytea(from:PByte; from_length:size_t; to_length:Psize_t):PByte; cdecl;
{ === in fe-print.c ===  }
{ output stream  }


procedure PQprint(fout:PFILE; res:PPGresult; ps:PPQprintOpt); cdecl;
{ option structure  }
{
 * really old printing routines
  }

{ where to send the output  }
{ pad the fields with spaces  }

{ field separator  }
{ display headers?  }
procedure PQdisplayTuples(res:PPGresult; fp:PFILE; fillAlign:longint; fieldSep:PChar; printHeader:longint; 
            quiet:longint); cdecl;

{ output stream  }
{ print attribute names  }
{ delimiter bars  }
procedure PQprintTuples(res:PPGresult; fout:PFILE; printAttName:longint; terseOutput:longint; width:longint); cdecl;
{ width of column, if 0, use variable width  }
{ === in fe-lobj.c ===  }
{ Large-object access routines  }
function lo_open(conn:PPGconn; lobjId:Oid; mode:longint):longint; cdecl;
function lo_close(conn:PPGconn; fd:longint):longint; cdecl;
function lo_read(conn:PPGconn; fd:longint; buf:PChar; len:size_t):longint; cdecl;

function lo_write(conn:PPGconn; fd:longint; buf:PChar; len:size_t):longint; cdecl;
function lo_lseek(conn:PPGconn; fd:longint; offset:longint; whence:longint):longint; cdecl;
function lo_creat(conn:PPGconn; mode:longint):Oid; cdecl;
function lo_create(conn:PPGconn; lobjId:Oid):Oid; cdecl;
function lo_tell(conn:PPGconn; fd:longint):longint; cdecl;
function lo_truncate(conn:PPGconn; fd:longint; len:size_t):longint; cdecl;
function lo_unlink(conn:PPGconn; lobjId:Oid):longint; cdecl;

function lo_import(conn:PPGconn; filename:PChar):Oid; cdecl;

function lo_import_with_oid(conn:PPGconn; filename:PChar; lobjId:Oid):Oid; cdecl;

function lo_export(conn:PPGconn; lobjId:Oid; filename:PChar):longint; cdecl;
{ === in fe-misc.c ===  }
{ Determine length of multibyte encoded char at *s  }

function PQmblen(s:PChar; encoding:longint):longint; cdecl;
{ Determine display length of multibyte encoded char at *s  }

function PQdsplen(s:PChar; encoding:longint):longint; cdecl;
{ Get encoding id from environment variable PGCLIENTENCODING  }
function PQenv2encoding:longint; cdecl;
{ === in fe-auth.c ===  }


function PQencryptPassword(passwd:PChar; user:PChar):PChar; cdecl;
{ === in encnames.c ===  }

function pg_char_to_encoding(name:PChar):longint; cdecl;

function pg_encoding_to_char(encoding:longint):PChar; cdecl;
function pg_valid_server_encoding_id(encoding:longint):longint; cdecl;



implementation
